Fix carousel alignment

--- a/_templates/styles.css
+++ b/_templates/styles.css
@@ -37,7 +37,8 @@
 }
 
 .carousel-inner > div > img {
-    height: 480px;
+    height: 600px;
+    width: 100%;
     object-fit: scale-down;
 }
 
